TestSuite/errors/err0130.pas
uses GraphABC;

const a : real = Color.CornflowerBlue;
begin
end.